include/sonare/sonare_c_features.h

/// @brief Detects song-structure sections (intro/verse/chorus/...).
SonareError sonare_analyze_sections(const float* samples, size_t length, int sample_rate, int n_fft,
                                    int hop_length, float min_section_sec,
                                    SonareSectionResult* out);
/// @brief Extracts the melody contour from monophonic audio via plain YIN
///   (left-aligned, no Viterbi smoothing). Shorthand for sonare_analyze_melody_ex
///   with use_pyin=0.
/// @param threshold YIN's aperiodicity cutoff on the cumulative mean normalized
///   difference function, NOT a level in the units of @p samples. The CMNDF is
///   normalized by construction, so this is scale-free: the same value behaves
///   the same on quiet and loud input, and it does not need calibrating against
///   the caller's own data. Must be within (0, 1]; anything else is rejected
///   with @c SONARE_ERROR_INVALID_PARAMETER. 0.1 is the library default and
///   librosa's. Lower accepts only strongly periodic frames, raising the
///   unvoiced count; higher admits noisier ones.
SonareError sonare_analyze_melody(const float* samples, size_t length, int sample_rate, float fmin,
                                  float fmax, int frame_length, int hop_length, float threshold,
                                  SonareMelodyResult* out);
void sonare_free_string_array(SonareStringArray* result);
void sonare_free_section_result(SonareSectionResult* result);
void sonare_free_melody_result(SonareMelodyResult* result);
// ============================================================================
// Features - Constant-Q / Variable-Q transforms
// ============================================================================

/* Forward CQT/VQT magnitude result. @c magnitude is [n_bins x n_frames]
   row-major and @c frequencies has @c n_bins center frequencies (Hz). Free both
   arrays with sonare_free_cqt_result. */
typedef struct {
  int n_bins;
  int n_frames;
  int hop_length;
  int sample_rate;
  float* magnitude;   /* n_bins * n_frames */
  float* frequencies; /* n_bins */
} SonareCqtResult;
/// @brief Computes the Constant-Q Transform magnitude.
SonareError sonare_cqt(const float* samples, size_t length, int sample_rate, int hop_length,
                       float fmin, int n_bins, int bins_per_octave, SonareCqtResult* out);
/// @brief Computes a faster pseudo-CQT magnitude approximation.
SonareError sonare_pseudo_cqt(const float* samples, size_t length, int sample_rate, int hop_length,
                              float fmin, int n_bins, int bins_per_octave, SonareCqtResult* out);
/// @brief Computes a hybrid CQT magnitude.
SonareError sonare_hybrid_cqt(const float* samples, size_t length, int sample_rate, int hop_length,
                              float fmin, int n_bins, int bins_per_octave, SonareCqtResult* out);
/// @brief Computes the Variable-Q Transform magnitude (gamma controls Q).
/// @param gamma Bandwidth offset in Hz. Negative or NaN selects the
/// librosa-compatible ERB-derived automatic value; zero selects standard CQT.
SonareError sonare_vqt(const float* samples, size_t length, int sample_rate, int hop_length,
                       float fmin, int n_bins, int bins_per_octave, float gamma,
                       SonareCqtResult* out);
void sonare_free_cqt_result(SonareCqtResult* result);
// ============================================================================
// Features - Inverse reconstruction (Mel/MFCC -> spectrogram -> audio)
// ============================================================================

/* Result of an inverse spectrogram reconstruction. @c data is a row-major
   [rows x n_frames] matrix (rows = n_bins for mel_to_stft, n_mels for
   mfcc_to_mel). Free @c data with sonare_free_inverse_result. */
typedef struct {
  int rows;     /* Number of rows (frequency/Mel bins) */
  int n_frames; /* Number of time frames */
  float* data;  /* rows * n_frames, row-major */
} SonareInverseResult;
/* UNCHECKED-LENGTH CONTRACT (the four inverse functions below):
   each reads exactly (rows * n_frames) floats from its input matrix, where rows
   is n_mels for the mel_* functions and n_mfcc for the mfcc_* functions. The
   functions CANNOT verify that the caller's buffer is actually that long, so a
   wrong n_frames / n_mels / n_mfcc relative to the real allocation is a heap
   over-read (undefined behaviour). Prefer the *_checked variants further below,
   which take an explicit input_length and return SONARE_ERROR_INVALID_PARAMETER
   when it does not equal rows * n_frames. The unchecked forms are retained for
   ABI back-compat; each *_checked variant delegates to its unchecked form after
   validating the length. */

/// @brief Approximate inverse of a Mel filterbank (Mel power -> STFT power).
/// @param mel Mel power spectrogram [n_mels x n_frames] row-major.
/// @param n_mels Number of Mel bands.
/// @param n_frames Number of time frames.
/// @param sample_rate Sample rate of the audio that produced @p mel (Hz).
/// @param n_fft FFT size of the source STFT (sets output bins = n_fft/2 + 1).
/// @param fmin Minimum Mel frequency in Hz (0.0 for librosa default).
/// @param fmax Maximum Mel frequency in Hz (0.0 = sr/2).
/// @param out Receives an [(n_fft/2 + 1) x n_frames] STFT power matrix.
/// @warning Reads n_mels * n_frames floats from @p mel without verifying the
///          buffer length; see the UNCHECKED-LENGTH CONTRACT above. Use
///          sonare_mel_to_stft_checked to have the length validated.
SonareError sonare_mel_to_stft(const float* mel, int n_mels, int n_frames, int sample_rate,
                               int n_fft, float fmin, float fmax, SonareInverseResult* out);
/// @brief Reconstructs audio from a Mel spectrogram via Griffin-Lim.
/// @param mel Mel power spectrogram [n_mels x n_frames] row-major.
/// @param n_mels Number of Mel bands.
/// @param n_frames Number of time frames.
/// @param sample_rate Sample rate of the original audio (Hz).
/// @param n_fft FFT size used for reconstruction.
/// @param hop_length Hop length used for reconstruction.
/// @param fmin Minimum Mel frequency in Hz (0.0 for librosa default).
/// @param fmax Maximum Mel frequency in Hz (0.0 = sr/2).
/// @param n_iter Griffin-Lim iterations (e.g. 32).
/// @param out Receives the reconstructed audio samples (caller frees with
///        sonare_free_floats).
/// @param out_length Receives the number of reconstructed samples.
SonareError sonare_mel_to_audio(const float* mel, int n_mels, int n_frames, int sample_rate,
                                int n_fft, int hop_length, float fmin, float fmax, int n_iter,
                                float** out, size_t* out_length);
/// @brief Inverts MFCC coefficients back to a Mel power spectrogram.
/// @param mfcc MFCC matrix [n_mfcc x n_frames] row-major.
/// @param n_mfcc Number of MFCCs.
/// @param n_frames Number of time frames.
/// @param n_mels Number of Mel bins to reconstruct.
/// @param out Receives an [n_mels x n_frames] Mel power matrix.
SonareError sonare_mfcc_to_mel(const float* mfcc, int n_mfcc, int n_frames, int n_mels,
                               SonareInverseResult* out);
/// @brief Reconstructs audio directly from MFCC via Mel inversion + Griffin-Lim.
/// @param mfcc MFCC matrix [n_mfcc x n_frames] row-major.
/// @param n_mfcc Number of MFCCs.
/// @param n_frames Number of time frames.
/// @param n_mels Number of Mel bins (must match the MFCC source config).
/// @param sample_rate Sample rate of the original audio (Hz).
/// @param n_fft FFT size used for reconstruction.
/// @param hop_length Hop length used for reconstruction.
/// @param fmin Minimum Mel frequency in Hz (0.0 for librosa default).
/// @param fmax Maximum Mel frequency in Hz (0.0 = sr/2).
/// @param n_iter Griffin-Lim iterations (e.g. 32).
/// @param out Receives the reconstructed audio samples (caller frees with
///        sonare_free_floats).
/// @param out_length Receives the number of reconstructed samples.
SonareError sonare_mfcc_to_audio(const float* mfcc, int n_mfcc, int n_frames, int n_mels,
                                 int sample_rate, int n_fft, int hop_length, float fmin, float fmax,
                                 int n_iter, float** out, size_t* out_length);
/// @brief Frees the matrix held by a SonareInverseResult.
void sonare_free_inverse_result(SonareInverseResult* result);