bindings/python/src/libsonare/_ffi_signatures_core.py


    if hasattr(lib, "sonare_analyze_sections"):
        lib.sonare_analyze_sections.restype = ctypes.c_int32
        lib.sonare_analyze_sections.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.POINTER(SonareSectionResult),
        ]
        lib.sonare_free_section_result.restype = None
        lib.sonare_free_section_result.argtypes = [ctypes.POINTER(SonareSectionResult)]

    if hasattr(lib, "sonare_analyze_melody"):
        lib.sonare_analyze_melody.restype = ctypes.c_int32
        lib.sonare_analyze_melody.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.c_float,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.POINTER(SonareMelodyResult),
        ]
        lib.sonare_free_melody_result.restype = None
        lib.sonare_free_melody_result.argtypes = [ctypes.POINTER(SonareMelodyResult)]

    if hasattr(lib, "sonare_cqt"):
        lib.sonare_cqt.restype = ctypes.c_int32
        lib.sonare_cqt.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.POINTER(SonareCqtResult),
        ]
        lib.sonare_pseudo_cqt.restype = ctypes.c_int32
        lib.sonare_pseudo_cqt.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.POINTER(SonareCqtResult),
        ]
        lib.sonare_hybrid_cqt.restype = ctypes.c_int32
        lib.sonare_hybrid_cqt.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.POINTER(SonareCqtResult),
        ]
        lib.sonare_vqt.restype = ctypes.c_int32
        lib.sonare_vqt.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.POINTER(SonareCqtResult),
        ]
        lib.sonare_free_cqt_result.restype = None
        lib.sonare_free_cqt_result.argtypes = [ctypes.POINTER(SonareCqtResult)]

    # --- Features - Inverse reconstruction ---

    if hasattr(lib, "sonare_mel_to_stft"):
        lib.sonare_mel_to_stft.restype = ctypes.c_int32
        lib.sonare_mel_to_stft.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.c_float,
            ctypes.POINTER(SonareInverseResult),
        ]
        lib.sonare_mel_to_audio.restype = ctypes.c_int32
        lib.sonare_mel_to_audio.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.c_float,
            ctypes.c_int,
            ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
            ctypes.POINTER(ctypes.c_size_t),
        ]
        lib.sonare_mfcc_to_mel.restype = ctypes.c_int32
        lib.sonare_mfcc_to_mel.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.POINTER(SonareInverseResult),
        ]
        lib.sonare_mfcc_to_audio.restype = ctypes.c_int32
        lib.sonare_mfcc_to_audio.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.c_float,
            ctypes.c_int,
            ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
            ctypes.POINTER(ctypes.c_size_t),
        ]
        lib.sonare_free_inverse_result.restype = None
        lib.sonare_free_inverse_result.argtypes = [ctypes.POINTER(SonareInverseResult)]

    # --- Streaming - StreamAnalyzer ---

    if hasattr(lib, "sonare_stream_analyzer_create"):
        lib.sonare_stream_analyzer_config_default.restype = ctypes.c_int32
        lib.sonare_stream_analyzer_config_default.argtypes = [
            ctypes.POINTER(SonareStreamConfig),
        ]
        lib.sonare_stream_analyzer_create.restype = ctypes.c_int32
        lib.sonare_stream_analyzer_create.argtypes = [
            ctypes.POINTER(SonareStreamConfig),
            ctypes.POINTER(ctypes.c_void_p),
        ]
        lib.sonare_stream_analyzer_destroy.restype = None
        lib.sonare_stream_analyzer_destroy.argtypes = [ctypes.c_void_p]
        lib.sonare_stream_analyzer_process.restype = ctypes.c_int32
        lib.sonare_stream_analyzer_process.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
        ]
        lib.sonare_stream_analyzer_process_with_offset.restype = ctypes.c_int32
        lib.sonare_stream_analyzer_process_with_offset.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_size_t,
        ]
        if hasattr(lib, "sonare_stream_analyzer_finalize"):
            lib.sonare_stream_analyzer_finalize.restype = ctypes.c_int32
            lib.sonare_stream_analyzer_finalize.argtypes = [ctypes.c_void_p]
        lib.sonare_stream_analyzer_available_frames.restype = ctypes.c_int32
        lib.sonare_stream_analyzer_available_frames.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_size_t),
        ]
        lib.sonare_stream_analyzer_read_frames.restype = ctypes.c_int32
        lib.sonare_stream_analyzer_read_frames.argtypes = [
            ctypes.c_void_p,
            ctypes.c_size_t,
            ctypes.POINTER(SonareStreamFrames),
        ]
        if hasattr(lib, "sonare_stream_analyzer_read_frames_u8"):
            lib.sonare_stream_analyzer_read_frames_u8.restype = ctypes.c_int32
            lib.sonare_stream_analyzer_read_frames_u8.argtypes = [
                ctypes.c_void_p,
                ctypes.c_size_t,
                ctypes.POINTER(SonareStreamFramesU8),
            ]
        if hasattr(lib, "sonare_stream_analyzer_read_frames_i16"):
            lib.sonare_stream_analyzer_read_frames_i16.restype = ctypes.c_int32
            lib.sonare_stream_analyzer_read_frames_i16.argtypes = [
                ctypes.c_void_p,
                ctypes.c_size_t,
                ctypes.POINTER(SonareStreamFramesI16),
            ]
        if hasattr(lib, "sonare_stream_quantize_config_default"):
            lib.sonare_stream_quantize_config_default.restype = ctypes.c_int32
            lib.sonare_stream_quantize_config_default.argtypes = [
                ctypes.POINTER(SonareStreamQuantizeConfig),
            ]
        if hasattr(lib, "sonare_stream_analyzer_read_frames_u8_ex"):
            lib.sonare_stream_analyzer_read_frames_u8_ex.restype = ctypes.c_int32
            lib.sonare_stream_analyzer_read_frames_u8_ex.argtypes = [
                ctypes.c_void_p,
                ctypes.POINTER(SonareStreamQuantizeConfig),
                ctypes.c_size_t,
                ctypes.POINTER(SonareStreamFramesU8),
            ]
        if hasattr(lib, "sonare_stream_analyzer_read_frames_i16_ex"):
            lib.sonare_stream_analyzer_read_frames_i16_ex.restype = ctypes.c_int32
            lib.sonare_stream_analyzer_read_frames_i16_ex.argtypes = [
                ctypes.c_void_p,
                ctypes.POINTER(SonareStreamQuantizeConfig),
                ctypes.c_size_t,
                ctypes.POINTER(SonareStreamFramesI16),
            ]
        lib.sonare_stream_analyzer_reset.restype = ctypes.c_int32
        lib.sonare_stream_analyzer_reset.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
        lib.sonare_stream_analyzer_stats.restype = ctypes.c_int32
        lib.sonare_stream_analyzer_stats.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(SonareStreamStats),
        ]
        if hasattr(lib, "sonare_free_stream_stats"):
            lib.sonare_free_stream_stats.restype = None
            lib.sonare_free_stream_stats.argtypes = [ctypes.POINTER(SonareStreamStats)]
        lib.sonare_stream_analyzer_frame_count.restype = ctypes.c_int32
        lib.sonare_stream_analyzer_frame_count.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_int),
        ]
        lib.sonare_stream_analyzer_current_time.restype = ctypes.c_int32
        lib.sonare_stream_analyzer_current_time.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_float),
        ]
        lib.sonare_stream_analyzer_sample_rate.restype = ctypes.c_int32
        lib.sonare_stream_analyzer_sample_rate.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_int),
        ]
        lib.sonare_stream_analyzer_set_expected_duration.restype = ctypes.c_int32
        lib.sonare_stream_analyzer_set_expected_duration.argtypes = [
            ctypes.c_void_p,
            ctypes.c_float,
        ]
        lib.sonare_stream_analyzer_set_normalization_gain.restype = ctypes.c_int32
        lib.sonare_stream_analyzer_set_normalization_gain.argtypes = [
            ctypes.c_void_p,
            ctypes.c_float,
        ]
        lib.sonare_stream_analyzer_set_tuning_ref_hz.restype = ctypes.c_int32
        lib.sonare_stream_analyzer_set_tuning_ref_hz.argtypes = [
            ctypes.c_void_p,
            ctypes.c_float,
        ]
        lib.sonare_free_stream_frames.restype = None
        lib.sonare_free_stream_frames.argtypes = [ctypes.POINTER(SonareStreamFrames)]
        if hasattr(lib, "sonare_free_stream_frames_u8"):
            lib.sonare_free_stream_frames_u8.restype = None
            lib.sonare_free_stream_frames_u8.argtypes = [ctypes.POINTER(SonareStreamFramesU8)]
        if hasattr(lib, "sonare_free_stream_frames_i16"):
            lib.sonare_free_stream_frames_i16.restype = None
            lib.sonare_free_stream_frames_i16.argtypes = [ctypes.POINTER(SonareStreamFramesI16)]

    # --- Memory management ---

    # sonare_free_floats
    lib.sonare_free_floats.restype = None
    lib.sonare_free_floats.argtypes = [ctypes.POINTER(ctypes.c_float)]

    # sonare_free_result
    lib.sonare_free_result.restype = None
    lib.sonare_free_result.argtypes = [ctypes.POINTER(SonareAnalysisResult)]

    lib.sonare_free_bpm_analysis_result.restype = None
    lib.sonare_free_bpm_analysis_result.argtypes = [ctypes.POINTER(SonareBpmAnalysisResult)]

    lib.sonare_free_acoustic_result.restype = None
    lib.sonare_free_acoustic_result.argtypes = [ctypes.POINTER(SonareAcousticResult)]

    lib.sonare_free_rhythm_result.restype = None
    lib.sonare_free_rhythm_result.argtypes = [ctypes.POINTER(SonareRhythmResult)]

    lib.sonare_free_dynamics_result.restype = None
    lib.sonare_free_dynamics_result.argtypes = [ctypes.POINTER(SonareDynamicsResult)]

    lib.sonare_free_timbre_result.restype = None
    lib.sonare_free_timbre_result.argtypes = [ctypes.POINTER(SonareTimbreResult)]

    lib.sonare_free_chord_analysis_result.restype = None
    lib.sonare_free_chord_analysis_result.argtypes = [ctypes.POINTER(SonareChordAnalysisResult)]

    lib.sonare_free_string_array.restype = None
    lib.sonare_free_string_array.argtypes = [ctypes.POINTER(SonareStringArray)]

    # --- Error handling ---
